# Combinatoria

./: CMakeLists.txt  Combinatoria.mk  Combinatoria.project  LICENSE  README.md  benchmark_results.csv  binomial.cpp  binomial.hpp  binomial_benchmark.cpp  c_cpp_properties.json  detailed_benchmark.cpp  gitignore  launch.json  main.cpp  main_fixed.cpp  main_new.cpp  practical_demo.cpp  settings.json  setup_git.ps1  tasks.json  test_binomial.cpp  test_cpp23.cpp  ultra_precision_benchmark.cpp
